test/tests/stages/9_functions/invalid_types/too_few_args.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  )
  {
  return
  identifier(a)
  +
  const int(1)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(1)
  )
  ;
  }
